Final fixes before submission

--- a/report/card.tex
+++ b/report/card.tex
@@ -65,7 +65,7 @@ public:
 \end{lstlisting}
 
 \begin{itemize}
-	\item Constructor and function prototypes for manipulation of the class within the larger scope of the program:
+	\item Constructor and function prototypes for manipulation of the object within the larger scope of the program:
 \end{itemize}
 
 \begin{lstlisting}
