--- a/report/imagewebcamio.tex
+++ b/report/imagewebcamio.tex
@@ -26,7 +26,7 @@ if (process_image(input))
 	return EXIT_FAILURE;
 		\end{lstlisting}
 
-		If the `--cam' command line argument is supplied, the image is instead loaded from a webcam frame during live capture. A loop is entered displaying images from the webcam until the space bar is pressed, the loop is exited and the image processed as shown previously. This decision process is shown below:
+		If the `-{}-cam' command line argument is supplied, the image is instead loaded from a webcam frame during live capture. A loop is entered displaying images from the webcam until the space bar is pressed, whereupon the loop is exited and the image processed as shown previously. This decision process is shown below:
 
 		\begin{lstlisting}
 
