--- a/report/report.bib
+++ b/report/report.bib
@@ -93,3 +93,10 @@
 	year={1986},
 	publisher={IEEE}
 }
+@online{wiki,
+	author = {Michael Tandy},
+	title = {Hough Transform},
+	year = {2008},
+	url = {http://en.wikipedia.org/wiki/Hough_transform},
+	urldate = {2014-04-27}
+}
